<resources>
    <string name="app_name">Sofias Trending</string>
    <string name="title_activity_to_do_add">Agregar una tarea</string>
    <string name="hintTitulo">Titulo de la tarea</string>
    <string name="hintDescripcion">Descripción de la tarea</string>
    <string name="rbBaja">Baja</string>
    <string name="rbMedia">Media</string>
    <string name="rbAlta">Alta</string>
    <string name="btnAgregarTarea">Agregar la tarea</string>
    <string name="tituloDialogoLongClick">Elija una acción</string>
    <string name="mensajeDialogoLongClick">¿Qué desea realizar con la tarea seleccionada?</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="mensajeCancelarDialogoLongClick">No se han realizado cambios en las tareas</string>
    <string name="mensajetareaEliminada">Tarea eliminada satisfactoriamente</string>
    <string name="img1">img1</string>
    <string name="img">...</string>
    <string name="carrito">CARRITO</string>
    <string name="nombre">Nombre</string>
    <string name="pin">Pin</string>
    <string name="comprar">Comprar</string>
    <string name="allan_and_sofia_s_store">Allan and Sofia\'s Store</string>
    <string name="ingresar">Ingresar</string>
    <string name="seleccione_una_opcion">Seleccione una opcion</string>
    <string name="ni_os">Niños</string>
    <string name="damas">Damas</string>
    <string name="caballeros">Caballeros</string>
    <string name="volver_a_inicio">Volver a Inicio</string>
    <string name="carrito2">Carrito</string>
    <string name="carrito3">Carrito</string>
    <string name="carrito33">Carrito</string>
    <string name="carrito444">Carrito</string>
    <string name="carrito666">Carrito</string>
    <string name="carrit">Carrito</string>
    <string name="carritoo">Carrito</string>
    <string name="carritoooo">Carrito</string>
    <string name="carritu">Carrito</string>
    <string name="carritm">Carrito</string>
</resources>
