<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
            android:text="@string/carrito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:id="@+id/tvCarrito" android:gravity="center_horizontal"
            android:contentDescription="@string/img"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="35dp"
            tools:layout_editor_absoluteX="8dp"
            android:id="@+id/RvCarrito"/>
    <Button
            android:text="@string/comprar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/btnComprar"
            tools:background="@drawable/estilo_botones"/>
</LinearLayout>