<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:background="@color/colorFondoSecundario">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="385dp"
            android:layout_height="457dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:gravity="fill_vertical|center_horizontal|center"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintVertical_bias="0.501">
        <TextView
                android:text="@string/seleccione_una_opcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvOpcion"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="52dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorAccent" android:textStyle="bold" app:fontFamily="cursive"
                android:textSize="26sp"/>
        <Button
                android:text="@string/ni_os"

                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnBoys" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/tvOpcion" app:layout_constraintEnd_toEndOf="@+id/tvOpcion"
                app:layout_constraintStart_toStartOf="@+id/tvOpcion"
                android:background="@drawable/estilo_botones"
                android:textStyle="bold" android:textColor="@android:color/white"/>
        <Button
                android:text="@string/damas"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnDamas" app:layout_constraintEnd_toEndOf="@+id/btnBoys"
                app:layout_constraintStart_toStartOf="@+id/btnBoys" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/btnBoys"
                android:background="@drawable/estilo_botones"
                android:textColor="@android:color/white" android:textStyle="bold"/>
        <Button
                android:text="@string/caballeros"
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:id="@+id/btnCaballeros" app:layout_constraintEnd_toEndOf="@+id/btnDamas"
                app:layout_constraintStart_toStartOf="@+id/btnDamas" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/btnDamas"
                android:background="@drawable/estilo_botones"
                android:textColor="@android:color/white" android:textStyle="bold"/>
        <TextView
                android:text="@string/volver_a_inicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvInicio" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/btnCaballeros"
                app:layout_constraintEnd_toEndOf="@+id/btnCaballeros"
                app:layout_constraintStart_toStartOf="@+id/btnCaballeros" android:textColor="@color/colorAccent"
                android:textStyle="bold" app:fontFamily="cursive" android:textSize="24sp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>